Release 1.1.47
  * Widened tech table so all users can see tech decimal places (thanks Trabi and Junta!)
  * Stats details tab automatically picks the opponent you've fought the most with.

Release 1.1.46
  * The Support tab now helps you manage support across the entire map--displaying overlapping support
    and supply lines of your ports and supply ships.
  * City Waypoint is now cleared when you capture a city and when the type of unit being built in the city changes.
  * Ported to Linux with a tremendous amount of help from Barry Peddycord.  Thank you kind sir!!!
  * Changed event model in client.  This should make the client faster and less glitchy, but
    some stuff in the client might not update properly while I work out the kinks of the new event model.

Release 1.1.45
  * Fixed sound.  (You can disable it in prefs if you want.)
  * Fixed bug to allow ships to enter water sectors that are completely surrounded by land.  (Thanks thegeneral!)
  * When on the city tab, don't select a single unit in a city.  This will allow players to set waypoints for all cities.
  * Removed horizontal scrollbars from sector, unit, city, and plan tabs.
  * Fixed bug that didn't display ETA on city tab
  * Moved prefs from tab to menu bar
  * Added new "Supply" tab that will be used to review/manage supply in a future release.

Release 1.1.44
  * Cities now have waypoints.  To set a waypoint on a city, select the city and right click on the map where you
    want the waypoint to be.  Any unit with sufficient mobility in that city will automatically move to that waypoint
    when it is created or updated.
  * Ally waypoints do not affect units.  Waypoints do not affect units that already have move orders.
  * Report adjacent units that fire when you attack (they were attacking but not being reported in the command log)
  * Don't reload city table when changing build orders for a city (yay!)